# openmodels

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  model.json  model.pkl  pyproject.toml  requirements.txt  testpypi-badge.json
.github/workflows/: ci.yml  publish-pypi.yml
docs/: index.md
model2json/: __init__.py  test_helpers.py
models2json/: __init__.py
openmodels/: __init__.py  core.py  exceptions.py  format_registry.py  protocols.py  test_helpers.py
openmodels/converters/: __init__.py  json_converter.py  pickle_converter.py
openmodels/serializers/: __init__.py  base.py  sklearn_serializer.py
openmodels/serializers/sklearn/: _custom_estimator.py  sklearn_serializer.py
test/: test_classification.py  test_clustering.py  test_custom_estimator.py  test_others.py  test_regression.py  test_transformation.py
test/temp/: readme.dm
